got a temporary fix to offense button sizes stretching REALLY WIDE in landscape view

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -157,13 +157,12 @@ button {
     display: none;
 }
 
-.dribble-btn,
-.shot {
+.offense-btns > * {
     flex: 1;
 }
 
 .dribble-btn {
-    flex: 100%;
+    flex-basis: 100%;
 }
 
 /* /////////////// TIMER-RELATED ///////////////// */
@@ -218,6 +217,8 @@ button {
     font-size: 1.25rem;
 }
 
+/* /////////////// MEDIA QUERIES ///////////////// */
+
 @media (min-width: 640px) {
 
     .scoreboard {
@@ -244,21 +245,12 @@ button {
         grid-column: 1 / -1;
     }
 
-    .display {
-        width: 100%;
-        height: 50%;
-    }
-
-    .display-heading {
-        margin: 0 auto;
-    }
-
-    .offense-btns {
-        flex-wrap: nowrap;
-    }
-
     button {
         width: 33%;
+    }
+    
+    .offense-btns {
+        flex-wrap: nowrap;
     }
 
     .offense-btns > * {
@@ -268,6 +260,94 @@ button {
     .new-game-btn,
     .start-period-btn {
         width: 100%;
+    }
+
+    .display {
+        width: 100%;
+        height: 50%;
+    }
+
+    .display-heading {
+        margin: 0 auto;
+    }
+
+}
+
+@media (max-height: 480px) and (orientation: landscape) {
+
+    .background-container {
+        display: flex;
+    }
+
+    .background-container > * {
+        flex: 50%;
+        height: 100%;
+    }
+
+    .scoreboard {
+        width: max-content;
+    }
+
+    .dynamic-elements-container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-areas: 
+            "me  you  btns"
+            "pos foul btns";
+        width: 80vw;
+    }
+
+    .region {
+        flex-direction: row;
+    }
+
+    .region-1 {
+        grid-area: me;
+    }
+
+    .region-2 {
+        grid-area: you;
+    }
+
+    .region-3 {
+        grid-area: pos;
+    }
+
+    .region-4 {
+        grid-area: foul;
+        line-height: unset;
+    }
+
+    .region-3 .display-content,
+    .region-4 .display-content {
+        padding: 0 .5em;
+    }
+
+    .region-5 {
+        grid-area: btns;
+        display: flex;
+    }
+
+    button {
+        width: 100%;
+    }
+
+    .offense-btns {
+        flex-wrap: wrap;
+    }
+
+    .offense-btns > * {
+        flex-basis: 100%;
+    }
+
+    .region-6 {
+        display: none;
+    }
+
+    .display {
+        height: 100%;
+        width: 50%;
     }
 
 }
@@ -313,6 +393,22 @@ button {
         justify-content: center;
     }
 
+    button {
+        width: auto;
+    }
+
+    .offense-btns {
+        flex-wrap: wrap;
+    }
+
+    .offense-btns > * {
+        flex: 1;
+    }
+
+    .dribble-btn {
+        flex-basis: 100%;
+    }
+
     .region-6 {
         display: block;
         order: 4;
@@ -325,23 +421,6 @@ button {
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
-    }
-
-    button {
-        width: auto;
-    }
-
-    .offense-btns {
-        flex-wrap: wrap;
-    }
-
-    .dribble-btn,
-    .shot {
-        flex: 1;
-    }
-
-    .dribble-btn {
-        flex: 100%;
     }
 
 }
@@ -365,82 +444,4 @@ button {
         width: 50%;
     }
     
-}
-
-@media (max-height: 480px) and (orientation: landscape) {
-
-    .background-container {
-        display: flex;
-    }
-
-    .background-container > * {
-        flex: 50%;
-        height: 100%;
-    }
-
-    .scoreboard {
-        width: 100%;
-    }
-
-    .dynamic-elements-container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-template-areas: 
-            "me  you  btns"
-            "pos foul btns";
-    }
-
-    .region {
-        flex-direction: row;
-    }
-
-    .region-1 {
-        grid-area: me;
-    }
-
-    .region-2 {
-        grid-area: you;
-    }
-
-    .region-3 {
-        grid-area: pos;
-    }
-
-    .region-4 {
-        grid-area: foul;
-        line-height: unset;
-    }
-
-    .region-3 .display-content,
-    .region-4 .display-content {
-        padding: 0 .5em;
-    }
-
-    .region-5 {
-        grid-area: btns;
-        display: flex;
-    }
-
-    .region-6 {
-        display: none;
-    }
-
-    button {
-        width: 100%;
-    }
-
-    .offense-btns {
-        flex-wrap: wrap;
-    }
-
-    .offense-btns > * {
-        flex: 100%;
-    }
-
-    .display {
-        height: 100%;
-        width: 50%;
-    }
-
 }
